--- a/css/style.css
+++ b/css/style.css
@@ -1213,7 +1213,7 @@ input.error {
 .header {
   position: relative;
   padding: 15px 0;
-  margin-top: 20px;
+  margin-top: 30px;
   z-index: 999;
 }
 
@@ -1221,9 +1221,9 @@ input.error {
   content: '';
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
-  top: 0;
+  top: -3px;
   left: 0;
-  height: 46px;
+  height: 56px;
   width: 100%;
 }
 
@@ -1244,16 +1244,14 @@ input.error {
   position: absolute;
   top: auto;
   left: 0;
-  width: 80px;
-  height: 80px;
+  width: 100px;
   z-index: 3;
 }
 
 .header_title {
   letter-spacing: 4.5px;
   color: #ffffff;
-  font-size: 24px;
-  margin-left: 100px;
+  margin-left: 150px;
   font-family: 'Proxima Nova Thin', sans-serif;
   text-transform: uppercase;
 }
@@ -1285,7 +1283,7 @@ input.error {
 }
 
 .hero {
-  margin-top: -70px;
+  margin-top: -80px;
   min-height: 700px;
   height: 100vh;
   overflow: hidden;
@@ -1295,7 +1293,7 @@ input.error {
 
 .hero-arrow {
   position: absolute;
-  z-index: 999;
+  z-index: 998;
   bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1806,7 +1804,8 @@ input.error {
 .footer {
   background-color: rgba(0, 0, 0, 0.75);
   color: #ffffff;
-  padding: 15px 0;
+  padding: 25px 0;
+  margin-top: -5px;
 }
 
 .footer-wrap {
@@ -1823,7 +1822,6 @@ input.error {
 
 .footer-logo {
   width: 80px;
-  height: 80px;
 }
 
 .footer-social__list {
