--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,17 +1,14 @@
 .footer 
   background-color: $dark-color
   color: $light-color
-  padding: 15px 0
+  padding: 25px 0
+  margin-top: -5px
   &-wrap 
     display: flex
     justify-content: space-between
     align-items: center
   &-logo 
     width: 80px
-    height: 80px
-    // border: 1px solid $medium-color
-    // border-radius: 80px
-    // background-color: $light-color
   &-social
     &__list 
       display: flex
