--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,18 +1,15 @@
 .header 
   position: relative
-  // padding: 23px 0
   padding: 15px 0
-  margin-top: 20px
-  // background-color: $medium-color
+  margin-top: 30px
   z-index: 999
   &:before 
     content: ''
     position: absolute
     background-color: $medium-color
-    top: 0
+    top: -3px
     left: 0
-    // height: 66px
-    height: 46px
+    height: 56px
     width: 100%
   &-wrap 
     position: relative
@@ -21,21 +18,14 @@
     align-items: center
   &-logo 
     position: absolute
-    // top: -20px
     top: auto
     left: 0
-    width: 80px
-    height: 80px
-    // border: 1px solid $medium-color
-    // border-radius: 80px
-    // background-color: $light-color
+    width: 100px
     z-index: 3
   &_title 
-    // font-family: 'SONGER Grotesque'
     letter-spacing: 4.5px
     color: $light-color
-    font-size: 24px
-    margin-left: 100px
+    margin-left: 150px
     +thin
     text-transform: uppercase
   &-list 
