--- a/css/style.css
+++ b/css/style.css
@@ -1102,7 +1102,7 @@ input.error {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: rgba(0, 0, 0, 0.75);
   opacity: 0;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
@@ -1948,6 +1948,27 @@ input.error {
   background-attachment: fixed;
   background-repeat: no-repeat;
   height: 100vh;
+  margin-top: -80px;
+  position: relative;
+}
+
+.project__hero__content {
+  padding: 80px;
+  position: absolute;
+  top: 45%;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+}
+
+.project__title {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.project__subtitle {
+  font-size: 24px;
+  font-family: 'Proxima Nova Thin', sans-serif;
 }
 
 #project_1 {
