--- a/sass/projects/_project.sass
+++ b/sass/projects/_project.sass
@@ -6,6 +6,22 @@
     background-attachment: fixed
     background-repeat: no-repeat
     height: 100vh
+    margin-top: -80px
+    position: relative
+    &__content 
+      padding: 80px
+      position: absolute
+      top: 45%
+      left: 0
+      background-color: $medium-color
+      color: $light-color
+  &__title 
+    display: block
+    margin-bottom: 20px
+  &__subtitle
+    font-size: 24px 
+    +thin
+
   
 #project_1 
   height: 4000px
